version 0.2
Signed-off-by: Sven Marquardt <dev@mail.smarquardt.space>